--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,11 +14,10 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-
-        
-Qasim
-
-        
+        <h1>This is the H1</h1>
+        <p class="error">error lol</p>
+        <p class="notification">notification lol</p>
+        <a href="#">Red</a>
         <script src="" async defer></script>
     </body>
 </html>
