--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,85 +4,72 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import 'sassVars';
 
-
-
-//Declaring variables Theme Colors 
-  $primary : #6c83e7;
-  $secondary: #40b64a; 
-  $error : #ee5151;
-  $info :  #e2c35f;
-
-// spacing 
-$base-padding: 0.74rem;
-$base-margin: 0.75rem;
-
-//borders 
-$base-border-thickness: 1px;
-$base-border-radius: 20px;
 
 h1 {
-  color: $primary;
-  margin-bottom: $base-margin;
-}
-
-
-a {
-  color: $primary;
-}
-
-
-button {
-  color: white;
-  border: 0;
-  background-color:cadetblue;
-  border-radius: $base-border-radius;
-  padding: $base-padding;
-}
-
-.error {
-  color: $error;
-  border-color: $error;
-  border-style: solid;
-  margin: $base-margin;
-  padding: $base-padding;
-  border-radius: $base-border-radius;
-  border-width:$base-border-thickness;
-}
-
-.notification {
-  color: $secondary;
-  border-color:$secondary;
-  border-style: solid;
-  margin: $base-margin;
-  padding: $base-padding;
-  border-radius: $base-border-radius;
-  border-width:$base-border-thickness;
-}
-
-
-
-
-  body {
-    font-family: Poppins;
-    background-color:  rgb(238, 208, 204);;
+    color: $primary;
+    margin-bottom: $base-margin;
   }
   
-  ul {
-    padding: 0;
-    list-style-type: none;
-  }
   
   a {
-    text-decoration: none;
+    color: $primary;
   }
   
-  hr {
+  
+  button {
+    color: white;
     border: 0;
-    border-top: 1px dotted #efefef;
+    background-color:cadetblue;
+    border-radius: $base-border-radius;
+    padding: $base-padding;
   }
   
-  img {
-    max-width: 100%;
+  .error {
+    color: $error;
+    border-color: $error;
+    border-style: solid;
+    margin: $base-margin;
+    padding: $base-padding;
+    border-radius: $base-border-radius;
+    border-width:$base-border-thickness;
   }
+  
+  .notification {
+    color: $secondary;
+    border-color:$secondary;
+    border-style: solid;
+    margin: $base-margin;
+    padding: $base-padding;
+    border-radius: $base-border-radius;
+    border-width:$base-border-thickness;
+  }
+  
+  
+  
+  
+    body {
+      font-family: Poppins;
+      background-color:  rgb(238, 208, 204);;
+    }
+    
+    ul {
+      padding: 0;
+      list-style-type: none;
+    }
+    
+    a {
+      text-decoration: none;
+    }
+    
+    hr {
+      border: 0;
+      border-top: 1px dotted #efefef;
+    }
+    
+    img {
+      max-width: 100%;
+    }
+    
   
