--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,10 +14,16 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>This is the H1</h1>
-        <p class="error">error lol</p>
-        <p class="notification">notification lol</p>
-        <a href="#">Red</a>
+        <!-- CARD -->
+        <h2>CARDS</h2>
+        <div class="card">
+            <div class="card-title">some card title</div>
+            <div class="card-body">Lorem ipsum dolor sit amet.
+            <a href="#">some link lol</a>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut non iusto voluptatum fugiat quae!x    
+        </div>
+
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
