--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,12 +11,10 @@
 @import 'components/base';
 
 
-
 // colors
 
-
 // Component (button, card, navbar)
-@import 'Components/card';
+@import 'components/card';
 
 // utilities (margin, padding, opacity)
 
