--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,7 +7,7 @@
     border: $base-border-thickness solid #ddd;
     box-shadow: $base-box-shadow;
     background-color: $whiteBackground;
-    border-radius: math.div($base-border-radius, 4) ;
+    border-radius: 20px;
     border: 1px solid;
 
 
