--- a/app/javascript/src/components/_card.scss
+++ b/app/javascript/src/components/_card.scss
@@ -1,5 +1,5 @@
+@use "sass:math";
 
-@use 'scss:math';
 
 .card {
     display: block;
@@ -7,7 +7,7 @@
     border: $base-border-thickness solid #ddd;
     box-shadow: $base-box-shadow;
     background-color: $whiteBackground;
-    border-radius: 20px;
+    border-radius: math.div($base-border-radius, 2);
     border: 1px solid;
 
 
