ues, include, mixins, classes, functions  in scss

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -12,9 +12,11 @@
 
 
 // colors
+@import 'components/colors';
 
 // Component (button, card, navbar)
 @import 'components/card';
+@import 'components/button';
 
 // utilities (margin, padding, opacity)
 
