--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,6 +14,50 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <h2>BUTTONS</h2>
+        <button class="btn-red">Qasim</button>
+        <button class="btn">Qasim</button>
+        <button class="btn-outline-red">Qasim</button>
+        <!-- COLORS -->
+        <h2>COLORS</h2>
+        <ul>
+            <li class="text-primary text-hover-red">sample color</li>
+            <li class="text-secondry">sample color</li>
+            <li class="text-red">sample color</li>
+            <li class="text-green">sample color</li>
+            <li class="text-blue">sample color</li>
+            <li class="text-yellow">sample color</li>
+            <li class="text-white">sample color</li>
+            <li class="text-black">sample color</li>
+        </ul>
+        <hr>
+        <h2>BACKGROUND Colors </h2>
+        <ul>
+            <li class="bg-primary text-green">sample color</li>
+            <li class="bg-secondry">sample color</li>
+            <li class="bg-red">sample color</li>
+            <li class="bg-green">sample color</li>
+            <li class="bg-primary">sample color</li>
+            <li class="bg-yellow">sample color</li>
+            <li class="bg-white">sample color</li>
+            <li class="bg-black">sample color</li>
+        </ul>
+
+        <h2>color variations  </h2>
+
+        <ul>
+            <li class="bg-primary-dark-1 text-yellow">som text </li>
+            <li class="bg-primary-dark-2 text-yellow">som text </li>
+            <li class="bg-primary-dark-3 text-yellow">som text </li>
+            <li class="bg-primary-dark-4 text-yellow">som text </li>
+            <li class="bg-primary-dark-5 text-yellow">som text </li>
+            <li class="bg-primary-dark-6 text-yellow">som text </li>
+            <li class="bg-primary-dark-7 text-yellow">som text </li>
+            <li class="bg-primary-dark-8 text-yellow">som text </li>
+            <li class="bg-primary-dark-9 text-yellow">som text </li>
+        </ul>
+    
+
         <!-- CARD -->
         <h2>CARDS</h2>
         <div class="card">
