--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -1,3 +1,5 @@
+//functions 
+@import 'functions';
 
 // External 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -9,8 +11,10 @@
 
 // base & layout
 @import 'components/base';
-
-
+@import 'breakpoints';
+@import 'grid';
+@import 'navbar';
+@import 'badge';
 // colors
 @import 'components/colors';
 
@@ -19,4 +23,4 @@
 @import 'components/button';
 
 // utilities (margin, padding, opacity)
-
+@import 'utilities';
