--- a/app/javascript/src/components/_base.scss
+++ b/app/javascript/src/components/_base.scss
@@ -4,10 +4,16 @@ h1 {
   margin-bottom: $base-margin;
 }
 
-
-a {
-  color: $primary;
+a { 
+  font-size: $base-font-size-m ;
+  text-decoration: underline;
+  color:black;
+  &:hover {
+    border-bottom: 1px solid;
+    background: #CDFEAA;
+  }
 }
+
 
 
 button {
@@ -51,9 +57,6 @@ button {
     list-style-type: none;
   }
   
-  a {
-    text-decoration: none;
-  }
   
   hr {
     border: 0;
