--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,108 +14,25 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-
-        <nav class="nav-primary text-black">
-
-            <div class="container">             <h2 class="site-title"> Qunobi Css Themes <span class="badge-info">lol</span></h2>
-                <ul style="display:flex">
-                    <li class="ml-1 text-hover-red">some text</li>
-                    <li class="ml-2 text-hover-white">some cal</li>
-                </ul> <p> light weight css library built in scss </p></div>
-
-        </nav>
-        <h2>GRID SYSTEM</h2>
         <div class="container">
             <div class="row gap-2 justify-flex-left">
-                <div class="col-12-sm col-6-md col-4-lg">
+         
+                 <div class="col-12-sm col-6-md col-4-lg">
                     <div class="card">
-                        <div class="card-title">Media size cards</div>
+                        <div class="card-title"> <%=  link_to  "Complete theme", main_cssTheme_path %>  </div>
                         <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
                     </div>
-                </div>   
+                </div>  
+
                 <div class="col-12-sm col-6-md col-4-lg">
                     <div class="card">
-                        <div class="card-title">Media size cards</div>
+                        <div class="card-title">React</div>
                         <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
                     </div>
-                </div>   
-                <div class="col-12-sm col-6-md col-4-lg">
-                    <div class="card">
-                        <div class="card-title">Media size cards</div>
-                        <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
-                    </div>
-                </div>   
-                <div class="col-12-sm col-6-md col-4-lg">
-                    <div class="card">
-                        <div class="card-title">Media size cards</div>
-                        <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
-                    </div>
-                </div>   
-            </div>
+                </div> 
+                
         </div>
-        <h2>BUTTONS</h2>
-        <button class="btn-red">Qasim</button>
-        <button class="btn" >Qasim</button>
-        <button class="btn-outline-red">Qasim</button>
-        <h2>BUTTONS COMPLEMENT</h2>
-        <button class="btn-comp-red">Qasim</button>
-        <button class="btn-comp">Qasim</button>
-        <button class="btn-outline-comp-red">Qasim</button>
-        <h2>BUTTONS opacity </h2>
-        <button class="o-10">opa button</button><button class="o-20">opa button</button><button class="o-30">opa button</button><button class="o-40">opa button</button><button class="o-50">opa button</button><button class="o-60">opa button</button><button class="o-70">opa button</button><button class="o-80">opa button</button><button class="o-90">opa button</button><button class="o-100">opa button</button>
-        <h2>BUTTONS padding </h2>
-        <button class="btn-red p-1">padding button</button><button class="btn-red p-2">padding button</button><button class="btn-red p-3">padding button</button><button class="btn-red p-4">padding button</button><button class="btn-red p-5">padding button</button>
-     <!-- COLORS -->
-        <!-- COLORS -->
-        <h2>COLORS</h2>
-        <ul>
-            <li class="text-primary text-hover-red font-sm">sample color</li>
-            <li class="text-secondry">sample color</li>
-            <li class="text-red font-l">sample color</li>
-            <li class="text-green">sample color</li>
-            <li class="text-blue">sample color</li>
-            <li class="text-yellow font-xl">sample color</li>
-            <li class="text-white">sample color</li>
-            <li class="text-black">sample color</li>
-        </ul>
-        <hr>
-        <h2>BACKGROUND Colors </h2>
-        <ul>
-            <li class="bg-primary text-green">sample color</li>
-            <li class="bg-secondry">sample color</li>
-            <li class="bg-red">sample color</li>
-            <li class="bg-green">sample color</li>
-            <li class="bg-primary">sample color</li>
-            <li class="bg-yellow">sample color</li>
-            <li class="bg-white">sample color</li>
-            <li class="bg-black">sample color</li>
-        </ul>
-
-        <h2>color variations  </h2>
-
-        <ul>
-            <li class="bg-primary-dark-1 text-yellow ">som text </li>
-            <li class="bg-primary-dark-2 text-yellow">som text </li>
-            <li class="bg-primary-dark-3 text-yellow">som text </li>
-            <li class="bg-primary-dark-4 text-yellow">som text </li>
-            <li class="bg-primary-dark-5 text-yellow">som text </li>
-            <li class="bg-primary-dark-6 text-yellow">som text </li>
-            <li class="bg-primary-dark-7 text-yellow">som text </li>
-            <li class="bg-primary-dark-8 text-yellow">som text </li>
-            <li class="bg-primary-dark-9 text-yellow">som text </li>
-        </ul>
-    
-
-        <!-- CARD -->
-        <h2>CARDS</h2>
-        <div class="card">
-            <div class="card-title">some card title</div>
-            <div class="card-body">Lorem ipsum dolor sit amet.
-            <a href="#">some link lol</a>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut non iusto voluptatum fugiat quae!x    
-        </div>
-
-        </div>
+    </div>
         <script src="" async defer></script>
     </body>
 </html>
