--- a/app/javascript/src/components/_base.scss
+++ b/app/javascript/src/components/_base.scss
@@ -1,9 +1,10 @@
 
 h1 {
-  color: $primary;
-  margin-bottom: $base-margin;
+  color: $title;
+  margin-bottom: $base-margin-small;
 }
 
+ 
 a { 
   font-size: $base-font-size-m ;
   text-decoration: underline;
