--- a/app/javascript/src/components/_sassVars.scss
+++ b/app/javascript/src/components/_sassVars.scss
@@ -4,7 +4,7 @@ $secondary: #40b64a;
 $error : #ee5151;
 $info :  #e2c35f;
 $whiteBackground:  #f3eede;
-
+$title: #eb4646e8;
 
 
 // color pallet 
@@ -38,7 +38,7 @@ $colors : (
 // spacing 
 $base-padding: 0.74rem;
 $base-margin: 0.75rem;
-
+$base-margin-small: 0.25rem;
 //borders 
 $base-border-thickness: 1px;
 $base-border-radius: 20px;
