--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -26,11 +26,16 @@
 
                 <div class="col-12-sm col-6-md col-4-lg">
                     <div class="card">
-                        <div class="card-title">React</div>
+                        <div class="card-title"><%=  link_to  "React", react_index_path %>  </div>
                         <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
                     </div>
                 </div> 
-                
+                <div class="col-12-sm col-6-md col-4-lg">
+                    <div class="card">
+                        <div class="card-title"><%=  link_to  "Angular", angular_index_path %>  </div>
+                        <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
+                    </div>
+                </div> 
         </div>
     </div>
         <script src="" async defer></script>
