--- a/app/views/react/index.html.erb
+++ b/app/views/react/index.html.erb
@@ -1,3 +1,1 @@
-<h1>React#index</h1>
-<p>Find me in app/views/react/index.html.erb</p>
-<%= javascript_pack_tag 'hello_react' %>
+<%= react_component("reactRails", { title: @title, subtitle: @subtitle}) %>
