--- a/NodeJsWeb/view/404.html
+++ b/NodeJsWeb/view/404.html
@@ -1,4 +1,4 @@
-<a  target="_blank" href="https://google.com">
+<a  target="_blank" href="/">
   <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-12 mt-5 mb-5">
