--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,43 +1,58 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> SCSS </title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row gap-2 justify-flex-left">
-         
-                 <div class="col-12-sm col-6-md col-4-lg">
-                    <div class="card">
-                        <div class="card-title"> <%=  link_to  "Complete theme", main_cssTheme_path %>  </div>
-                        <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
-                    </div>
-                </div>  
 
-                <div class="col-12-sm col-6-md col-4-lg">
-                    <div class="card">
-                        <div class="card-title"><%=  link_to  "React", react_index_path %>  </div>
-                        <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
-                    </div>
-                </div> 
-                <div class="col-12-sm col-6-md col-4-lg">
-                    <div class="card">
-                        <div class="card-title"><%=  link_to  "Angular", angular_index_path %>  </div>
-                        <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione consequuntur iste pariatur saepe?</div>
-                    </div>
-                </div> 
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title> SCSS </title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="">
+</head>
+
+<body>
+  <div class="container">
+    <div class="row gap-2 justify-flex-left">
+
+      <div class="col-12-sm col-6-md col-4-lg">
+        <div class="card">
+          <div class="card-title">
+            <%= link_to "Complete theme" , main_cssTheme_path %>
+          </div>
+          <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum
+            voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione
+            consequuntur iste pariatur saepe?</div>
         </div>
+      </div>
+
+      <div class="col-12-sm col-6-md col-4-lg">
+        <div class="card">
+          <div class="card-title">
+            <%= link_to "React" , react_index_path %>
+          </div>
+          <div class="card-text" style="word-wrap: break-word">
+            ReactJ: /RaitaJS/app/javascript/components/reactRails.jsx
+            APPJS: /RaitaJS/app/javascript/components/app.jsx
+          </div>
+        </div>
+      </div>
+      <div class="col-12-sm col-6-md col-4-lg">
+        <div class="card">
+          <div class="card-title">
+            <%= link_to "Angular" , angular_index_path %>
+          </div>
+          <div class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui fugit quidem quas eum
+            voluptate distinctio, explicabo odio sunt tempora magnam perspiciatis sint autem ullam unde, ratione
+            consequuntur iste pariatur saepe?</div>
+        </div>
+      </div>
     </div>
-        <script src="" async defer></script>
-    </body>
+  </div>
+  <script src="" async defer></script>
+</body>
+
 </html>
