scaffold genrtated for Rails Mode

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,11 @@
         <i class="fa fa-flag-checkered fa-4x"></i>
         <h4>4</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ipsam ab quasi voluptates odit ullam rerum distinctio eligendi, illum esse obcaecati velit qui.</p></li>
-    </ul>
+        <li>
+          <i class="fa fa-flag-checkered fa-4x"></i>
+          <h4>4</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ipsam ab quasi voluptates odit ullam rerum distinctio eligendi, illum esse obcaecati velit qui.</p></li>
+      </ul>
   </section>
 
   <section class="testimonials">
