--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,20 @@
 <nav class="nav-primary text-black">
 
-    <div class="container">             <h2 class="site-title">  <%= link_to  'Qunobi Css Theme', root_path %>  <span class="badge-info">lol</span></h2>
-        <ul style="display:flex">
-            <li class="ml-1 text-hover-red"> <%= link_to "Complete CSS theme", main_cssTheme_path %> </li>
-            <li class="ml-2 text-hover-white"><%= link_to "React Page",react_index_path %></li>
-        </ul> <p> light weight css library built in scss </p></div>
+  <div class="container">
+    <h2 class="site-title">
+      <%= link_to 'Qunobi Css Theme' , root_path %> <span class="badge-info">lol</span>
+    </h2>
+    <ul style="display:flex">
+      <li class="ml-1 text-hover-red">
+        <%= link_to "Complete CSS theme" , main_cssTheme_path %>
+      </li>
+    </ul>
+    <ul style="display:flex">
+      <li class="ml-2 text-hover-white">
+        <%= link_to "React Page" ,react_index_path %>
+    </ul>
+
+    <p> light weight css library built in scss </p>
+  </div>
 
 </nav>
