--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -23,4 +23,6 @@
 @import 'components/button';
 
 // utilities (margin, padding, opacity)
-@import 'utilities';
+ 
+ // footer styles
+ @import 'footer';
