--- a/app/views/react/index.html.erb
+++ b/app/views/react/index.html.erb
@@ -1,1 +1,25 @@
+
 <%= react_component("reactRails", { title: @title, subtitle: @subtitle}) %>
+
+
+<footer class="footer">
+
+  <div class="container">
+    <hr>
+    <article class="foot-content-left">
+      <ul> <%= @title %> &copy;
+      </ul>
+    </article>
+
+    <article class="foot-content">
+      <ul>
+        <li><a href="abulQasim@gmail.com">abulqasim110@gmail.com</a></li>
+        <li class="social"><a href="https://www.facebook.com/abulqasims">Facebook</a></li>
+        <li class="social"><a href="https://twitter.com/abul_qasim">Twitter</a></li>
+        <li class="social"><a href="https://www.linkedin.com/in/abulqasim/">LinkedIn</a></li>
+      </ul>
+    </article>
+
+  </div>
+
+</footer>
