--- a/app/javascript/src/components/_base.scss
+++ b/app/javascript/src/components/_base.scss
@@ -1,20 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*{
+margin:0;
+font-family: Roboto;
+}
+
 
 h1 {
   color: $title;
-  margin-bottom: $base-margin-small;
+  margin: $base-margin-small;
 }
 
  
-a { 
-  font-size: $base-font-size-m ;
-  text-decoration: underline;
-  color:black;
-  &:hover {
-    border-bottom: 1px solid;
-    background: #CDFEAA;
-  }
+
+a {
+  display: inline-block;
+  position: relative;
+  border: none;
+  padding-bottom: 4px;
+  color: #000;
+  font-family: Montserrat, helvetica, arial, sans-serif;
+  font-weight: 700;
+  font-family: Montserrat, helvetica, arial, sans-serif;
+  font-weight: 400;
+  text-transform: none;
 }
 
+a:active,
+a:focus,
+a:hover {
+  outline: 0;
+
+}
+
+a:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  -webkit-transition: all .4s cubic-bezier(.35, 1, .33, 1);
+  transition: all .4s cubic-bezier(.35, 1, .33, 1)
+  
+}
+
+a:hover {
+  color: #000
+}
+
+a:hover:before {
+  width: 100%
+}
+
+a:before {
+  background: #25241e
+} 
 
 
 button {
@@ -49,8 +90,8 @@ button {
 
 
   body {
-    font-family: Poppins;
-    background-color:  rgb(236, 226, 225);;
+
+    background-color:whiteBackground
   }
   
   ul {
