--- a/app/javascript/src/components/_button.scss
+++ b/app/javascript/src/components/_button.scss
@@ -5,7 +5,8 @@
     border: 0;
     padding: $base-padding $base-padding*2;  
     border-radius: $base-border-radius;
-    background-color:$bg-color
+    background-color:$bg-color;
+    margin: $base-margin-small;
 }
 
 .btn {
@@ -41,7 +42,7 @@
         }
 
     .btn-outline-#{$key}{
-        @include btn(mix(white, $val, 80));
+        @include btn(mix(white, $val, 90));
         &:hover{
             background-color: $val;
             color: lighten($val,30);
