--- a/app/javascript/src/_footer.scss
+++ b/app/javascript/src/_footer.scss
@@ -1,14 +1,16 @@
 
 .footer {
-
-  font-size: 14px;
-  position:absolute;
-  padding-left:5%;
-  box-sizing: border-box;
-  bottom:0px;
-  left:0;
-  right: 0;
+  bottom: 0;
+  color: #707070;
+  height: 2em;
+  left: 0;
+  position: relative; //changed to relative from fixed also works if position is not there
+  font-size: small;
+  width:100%;
 } 
+
+
+
 
 .footer .container {
   position: relative
