--- a/app/javascript/src/components/_base.scss
+++ b/app/javascript/src/components/_base.scss
@@ -1,14 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
 margin:0;
-font-family: Roboto;
+font-family: 'Montserrat', 'Roboto', 'Roboto Mono', verdana, arial, helvetica, sans-serif;
 }
 
 
 h1 {
   color: $title;
   margin: $base-margin-small;
+  font-family: 'Roboto Mono', verdana, arial, helvetica, sans-serif;
 }
 
  
@@ -19,10 +21,7 @@ a {
   border: none;
   padding-bottom: 4px;
   color: #000;
-  font-family: Montserrat, helvetica, arial, sans-serif;
-  font-weight: 700;
-  font-family: Montserrat, helvetica, arial, sans-serif;
-  font-weight: 400;
+  font-family: 'Roboto Mono', verdana, arial, helvetica, sans-serif;
   text-transform: none;
 }
 
@@ -64,6 +63,7 @@ button {
   background-color:cadetblue;
   border-radius: $base-border-radius;
   padding: $base-padding;
+  font-family: 'Roboto Mono', verdana, arial, helvetica, sans-serif;
 }
 
 .error {
