--- a/views/styles/contact.scss
+++ b/views/styles/contact.scss
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+
 * {
   box-sizing: border-box;
   color: #fff;
-  font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana,
-    "sans-serif";
+  font-family: 'Roboto Mono', verdana, arial, helvetica, sans-serif;
 }
 
 html,
