delete post reviews!!

--- a/app/javascript/src/components/_card.scss
+++ b/app/javascript/src/components/_card.scss
@@ -9,6 +9,7 @@
     align-items: center;
     text-align: center;
     min-height: 25px;
+    margin: $base-margin;
 
     .card-title {
         font-size: $base-font-size-xl;
